// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button base demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       填充按钮 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       描边按钮 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-dashed t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       虚框按钮 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       文字按钮 
      
    </span>
  </button>
</div>
`;

exports[`Button block demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
  style="justify-content: center;"
>
  <div
    class="tdesign-demo-block-column"
    style="min-width: 320px; max-width: 640px;"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary t-size-full-width"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-size-full-width"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-default t-size-full-width"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-default t-size-full-width"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
</div>
`;

exports[`Button icon demo works fine 1`] = `
<div
  class="demo-button-icon"
>
  <div
    class="demo-button-row"
  >
    <div
      class="demo-button-col"
    >
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        type="button"
      >
        
        
        <svg
          class="t-icon t-icon-add t-size-m"
        >
          <use
            href="#t-icon-add"
          />
        </svg>
        
        <span
          class="t-button__text"
        >
          
           新建 
          
        </span>
        
      </button>
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        
        
        <svg
          class="t-icon t-icon-cloud-upload t-size-m"
        >
          <use
            href="#t-icon-cloud-upload"
          />
        </svg>
        
        <span
          class="t-button__text"
        >
          
           上传文件 
          
        </span>
        
      </button>
    </div>
    <div
      class="demo-button-col"
    >
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary t-button--icon-only t-button--shape-circle"
        type="button"
      >
        
        
        <svg
          class="t-icon t-icon-discount t-size-m"
        >
          <use
            href="#t-icon-discount"
          />
        </svg>
        
        
        
      </button>
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary t-button--icon-only t-button--shape-circle"
        type="button"
      >
        
        
        <svg
          class="t-icon t-icon-cloud-download t-size-m"
        >
          <use
            href="#t-icon-cloud-download"
          />
        </svg>
        
        
        
      </button>
    </div>
    <!-- 使用 function 的形式定义 icon -->
    <div
      class="demo-button-col"
    >
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        
        <svg
          class="t-icon t-icon-search t-size-m"
        >
          <use
            href="#t-icon-search"
          />
        </svg>
        <span
          class="t-button__text"
        >
          
           Function Icon 
          
        </span>
        
      </button>
    </div>
  </div>
</div>
`;

exports[`Button loading demo works fine 1`] = `
<div
  class="button-base"
>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled t-is-loading"
    type="button"
  >
    
    <div
      class="t-loading t-size-m t-loading-lock t-loading--inherit-color v-transfer-dom"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        size="medium"
        version="1.1"
        viewBox="0 0 14 14"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="1"
          y="1"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <!---->
    </div>
    <span
      class="t-button__text"
    >
      
       主按钮 
      
    </span>
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-is-disabled t-is-loading"
    type="button"
  >
    
    <div
      class="t-loading t-size-m t-loading-lock t-loading--inherit-color v-transfer-dom"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        size="medium"
        version="1.1"
        viewBox="0 0 14 14"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="1"
          y="1"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <!---->
    </div>
    <span
      class="t-button__text"
    >
      
       次按钮 
      
    </span>
    
  </button>
</div>
`;

exports[`Button size demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <button
        class="t-button t-size-s t-button--variant-base t-button--theme-primary"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           填充按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-s t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           描边按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-s t-button--variant-dashed t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           虚框按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-s t-button--variant-text t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           文字按钮 
          
        </span>
      </button>
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           填充按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           描边按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-m t-button--variant-dashed t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           虚框按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-m t-button--variant-text t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           文字按钮 
          
        </span>
      </button>
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <button
        class="t-button t-size-l t-button--variant-base t-button--theme-primary"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           填充按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-l t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           描边按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-l t-button--variant-dashed t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           虚框按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-l t-button--variant-text t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           文字按钮 
          
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Button theme demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
</div>
`;
